----------------------- CHANGELOG ------------------------
Done:
    - Basic Format (Frames)
        -Updated for resizing
    - Basic Buttons
    - Upload Functionality
    - Display of File to be parsed
    - Storage of File to be Parsed
    - Can modify design (background/frame colors)
    - Link to (current)backend
    - Display results
    - Rudimentary Search bar Functionality

In progress:
    - Safety for functions without appropriate pre-conditions (search with no file etc)
    - Streamlining search bar

NOTES:
    - Having issues with Text Box overwriting Frame area
    - Can display data in table format through various means -- may use pandas?
        - Convert results to pandas db -> iterable -> display by rows columns
        - Will require more research
    - If having trouble with display, can also output file.
    - ^^^^ OUTDATED ^^^^^